--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 <body>
   
   <h1>Odin-Recipes</h1>
-  <a href="./recipes/american-goulash.html">American Goulash</a>
-  <br>
-  <a href="./recipes/apple-crumb-pie.html">Apple Crumb Pie</a>
-  <br>
-  <a href="./recipes/stuffed-cabbage-rolls.html">Stuffed Cabbage Rolls</a>
-
+    <ul>
+      <li><a href="./recipes/american-goulash.html">American Goulash</a></li>
+      <li><a href="./recipes/apple-crumb-pie.html">Apple Crumb Pie</a></li>
+      <li><a href="./recipes/stuffed-cabbage-rolls.html">Stuffed Cabbage Rolls</a></li>
+    </ul>
 </body>
 </html>
