--- a/recipes/american-goulash.html
+++ b/recipes/american-goulash.html
@@ -50,8 +50,9 @@
       </ol>
 </body>
 <footer>
-  <a href="../index.html">Home</a>
-  <br><br>
-  <a href="https://www.allrecipes.com/recipe/275489/chef-johns-american-goulash/" target="_blank" rel="noopener noreferrer">Allrecipe Source</a>
+  <ul>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="https://www.allrecipes.com/recipe/275489/chef-johns-american-goulash/" target="_blank" rel="noopener noreferrer">Allrecipe Source</a></li>
+  </ul>
 </footer>
 </html>
