--- a/recipes/apple-crumb-pie.html
+++ b/recipes/apple-crumb-pie.html
@@ -6,7 +6,6 @@
   <title>Apple Crumb Pie</title>
 </head>
 <body>
-
   <h1>Apple Crumb Pie </h1>
 
   <img src="../images/apple-crumb-pie.jpg" width="500" alt="Picture of the finished Dish">
@@ -44,8 +43,9 @@
     </ol>
 </body>
 <footer>
-  <a href="../index.html">Home</a>
-  <br><br>
-  <a href="https://www.allrecipes.com/recipe/15587/apple-crumb-pie/" target="_blank" rel="noopener noreferrer">Allrecipe Source</a>
+  <ul>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="https://www.allrecipes.com/recipe/15587/apple-crumb-pie/" target="_blank" rel="noopener noreferrer">Allrecipe Source</a></li>
+  </ul>
 </footer>
 </html>
