--- a/recipes/stuffed-cabbage-rolls.html
+++ b/recipes/stuffed-cabbage-rolls.html
@@ -6,10 +6,52 @@
   <title>Stuffed Cabbage Rolls</title>
 </head>
 <body>
-  
   <h1>Stuffed Cabbage Rolls</h1>
 
+  <img src="../images/Stuffed-Cabbage-Rolls.jpg" width="500" alt="Picture of the finished Dish">
 
-  <a href="../index.html">Home</a>
+    <h2>About the Dish</h2>
+
+      <p>
+        This cabbage rolls recipe is super easy to prep with cabbage leaves, ground beef, rice, and condensed tomato soup. I have been using this recipe for well over 20 years and still love it! To speed things up the rolls are cooked in a skillet on the stovetop but this recipe also works well in a slow cooker.
+      </p>
+
+    <h2>Ingredients</h2>
+
+      <ul>
+        <li>⅔ cup water</li>
+        <li>⅓ cup uncooked white rice</li>
+        <li>8 cabbage leaves</li>
+        <li>1 pound lean ground beef</li>
+        <li>¼ cup chopped onion</li>
+        <li>1 large egg, slightly beaten</li>
+        <li>1 (10.5 ounce) can condensed tomato soup, divided</li>
+        <li>1 teaspoon salt</li>
+        <li>¼ teaspoon ground black pepper</li>
+      </ul>
+
+    <h2>Steps</h2>
+
+      <ol>
+        <li>Gather all Ingredients</li>
+        <li>Bring water and rice to a boil in a saucepan.</li>
+        <li>Reduce heat to low, cover, and simmer until rice is tender and liquid has been absorbed, about 20 minutes.</li>
+        <li>Meanwhile, bring a large, wide saucepan of lightly salted water to a boil. Add cabbage leaves and cook for 2 to 4 minutes or until softened; drain.</li>
+        <li>Combine ground beef, 1 cup of cooked rice, onion, beaten egg, 2 tablespoons of tomato soup, salt, and pepper in a large bowl; mix thoroughly.</li>
+        <li>Spoon about 2 tablespoons of beef mixture onto each cabbage leaf.</li>
+        <li>Bring one end of the cabbage leaf over the mixture.</li>
+        <li>Roll and tuck in the ends to prevent the filling from falling out.</li>
+        <li>Place cabbage rolls in a large skillet over medium heat</li>
+        <li>Pour remaining tomato soup on top</li>
+        <li>Cover and bring to a boil; reduce heat to low and simmer for about 40 minutes, stirring and basting with the liquid often.</li>
+        <li>Serve and enjoy!</li>
+
+      </ol>
 </body>
+<footer>
+  <ul>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="https://www.allrecipes.com/recipe/26661/stuffed-cabbage-rolls/" target="_blank" rel="noopener noreferrer">Allrecipe Source</a></li>
+  </ul>
+</footer>
 </html>
